# ai-configurator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  INSTALL.md  MANIFEST.in  PACKAGE_SETUP.md  README.md  ROADMAP.md  TASKS.md  demo_progress.py  distrobox_test.sh  docker_test.sh  export_to_qcli.py  install.py  pyproject.toml  q_conversation.json  requirements-dev.txt  requirements.txt  tasks_conversion.md  test_clean_install.sh  test_global_context_fix.py  test_global_contexts.py  test_interactive.py  test_isolated_install.sh  test_template_infrastructure.py  thoughts.md  user_stories.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ai_configurator/: cli.py  cli_enhanced.py  cli_old.py  cli_phase2.py
ai_configurator/commands/: __init__.py
ai_configurator/commands_backup/: __init__.py  context.py  hooks.py  library.py  library_old.py
ai_configurator/core/: __init__.py  agent_installer.py  agent_manager.py  catalog_schema.py  config_library_manager.py  file_utils.py  library_manager.py  profile_installer.py  workflow_definition.py  workflow_state_manager.py
ai_configurator/core_backup/: automated_quality_checks.py  backward_compatibility.py  catalog_generator.py  config_manager.py  config_merger.py  configuration_validator.py  context_manager.py  dependency_resolver.py  directory_manager.py  error_handler.py  file_watcher.py  hook_manager.py  installation_planner.py  installation_tracker.py  installer.py  (+11 more)
contexts/: engagement-management.md  project-delivery.md
docs/: AGENT_EDITOR_GUIDE.md  ARCHITECTURE_REQUIREMENTS.md  KEYBOARD_SHORTCUTS.md  MIGRATION_GUIDE_V4.md  PROJECT_STATE_SUMMARY.md  TEMPLATE_GUIDE.md  TROUBLESHOOTING.md  TUI_GUIDE.md  USER_GUIDE.md  agentic_plan.md  ai-dlc-prompts.md  current_state.md  global-contexts.md  hooks.md  installation.md  library_plan.md  mcp-servers.md  profiles.md  q_cli_agent_schema.json  role-mcp-configuration.md
example/: workflow.py  workflow_cli.py
examples/: README.md
hooks/: context_loader.py
project_backup/: build.py  q_conversation.md  temp_library_manager.py  uvx_install.py
scripts/: cleanup_old_amazonq.py
templates/: global_context.json
tests/: README.md  __init__.py  conftest.py  run_comprehensive_tests.py  test_comprehensive_suite.py  test_comprehensive_yaml_validation.py  test_install.py  test_phase2_files.py  test_phase2_registry.py  test_phase2_sync.py
(+175 files in other folders)
